# djangocms_aoxomoxoa

./: .gitignore  AUTHORS  HISTORY  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
ripiu/djangocms_aoxomoxoa/: __init__.py  apps.py  cms_plugins.py  conf.py  item_publishers.py  utils.py
ripiu/djangocms_aoxomoxoa/admin/: __init__.py  base.py
ripiu/djangocms_aoxomoxoa/admin/options/: carousel.py  gallery.py  grid_panel.py  lightbox.py  lightbox_text_panel.py  main.py  navigation.py  slider.py  strip_panel.py  theme.py  thumbnail.py  tile_design.py  tile_text_panel.py  tiles.py
ripiu/djangocms_aoxomoxoa/migrations/: 0001_initial.py
ripiu/djangocms_aoxomoxoa/models/: __init__.py  plugins.py
ripiu/djangocms_aoxomoxoa/models/options/: __init__.py  carousel.py  constants.py  gallery.py  grid_panel.py  lightbox.py  lightbox_text_panel.py  main.py  navigation.py  slider.py  strip_panel.py  theme.py  thumbnail.py  tile_design.py  tile_text_panel.py  tiles.py
ripiu/djangocms_aoxomoxoa/static/ripiu/djangocms_aoxomoxoa/js/: unite.js
ripiu/djangocms_aoxomoxoa/templates/cmsplugin_filer_image/plugins/image/: default.html
ripiu/djangocms_aoxomoxoa/templates/djangocms_picture/default/: picture.html
ripiu/djangocms_aoxomoxoa/templates/ripiu/djangocms_aoxomoxoa/: empty.html  item.html  media.html  picture.html  unite.html  video_source.html
ripiu/djangocms_aoxomoxoa/templatetags/: aoxomoxoa_filters.py
