[bdist_wheel]
universal = 0

[flake8]
exclude =
    .git,
    **/migrations/*,
    __pycache__,
    build,

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
indent=4
known_first_party = django
length_sort=0
line_length = 79
multi_line_output = 5
not_skip = __init__.py
order_by_type=1

[metadata]
license-file = LICENSE
